<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegulationsActivity" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    tools:context=".RegulationsActivity" >
	    
		 <TextView
		    android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rulesandregs_title" 
	        android:textStyle="bold"/>
		 
		 <TextView
		    android:id="@+id/letter_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/letter_regs_title" 
	        android:textStyle="bold"/>
		 
		 <TextView 
		    android:id="@+id/letter_body"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    />
		 
		 <TextView
		    android:id="@+id/envelope_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/envelope_regs_title" 
	        android:textStyle="bold"/>
		 
		 <TextView 
		    android:id="@+id/envelope_body"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    />
		 
		 <TextView
		    android:id="@+id/package_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/package_regs_title" 
	        android:textStyle="bold"/>
		 
		 <TextView 
		    android:id="@+id/package_body"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    />
	</LinearLayout>
   

</ScrollView>
